--- a/index.html
+++ b/index.html
@@ -264,12 +264,14 @@
 <footer class="footer">
 
 </footer>
-<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
+<script type="text/javascript" src="js/jquery-3.6.1.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.6.0.js"></script>-->
+<!--<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>-->
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU"></script>
 <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
 <script src="js/inputmask.min.js"></script>
+<script src="js/form.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
