add yandex metrika

--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/style.css?ver=1.1" type="text/css"/>
+  <link rel="stylesheet" href="css/style1.css?ver=1.2" type="text/css"/>
   <link rel="stylesheet" href="css/media.css">
   <link rel="icon" href="img/favicon/favicon.svg" type="imege/svg+xm">
   <title>DIVIK Ремонт вариаторов</title>
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i].l=1*new Date();
+      for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+      k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+    ym(90566376, "init", {
+      clickmap:true,
+      trackLinks:true,
+      accurateTrackBounce:true,
+      ecommerce:"dataLayer"
+    });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/90566376" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter -->
 </head>
 <body>
 <header class="header">
@@ -262,8 +279,13 @@
     </section>
   </main>
 <footer class="footer">
-
+<!--  <noscript>-->
+<!--    <div>-->
+<!--      <img src="https://mc.yandex.ru/watch/90566376" style="position:absolute; left:-9999px;" alt="" />-->
+<!--    </div>-->
+<!--  </noscript>-->
 </footer>
+<!--<script src="js/yandexMetrika.js"></script>-->
 <script type="text/javascript" src="js/jquery-3.6.1.min.js"></script>
 <!--<script src="https://code.jquery.com/jquery-3.6.0.js"></script>-->
 <!--<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>-->
