--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="hero-wrapper container">
         <h1 class="hero-title">Ремонт вариатора в&nbsp;Нижнем Новгороде</h1>
         <p class="hero-text">Профессиональный ремонт с&nbsp;использованием спецоборудования, отсутствие посредников, собственное производство и&nbsp;огромное наличиие запчастей. Качественное восстановление вариаторов и&nbsp;узлов, диагностика Вашего автомобиля</p>
-        <a href="#question" tabindex="0" class="btn-reset hero-btn header__link">Отправить запрос</a>
+        <a href="#question" tabindex="0" class="btn-reset hero-btn header__link">Записаться на ремонт</a>
       </div>
     </section>
     <section id="advantages" class="advantages">
@@ -256,8 +256,8 @@
       <h2 class="visually-hidden">Задайте нам вопрос</h2>
       <div class="question-wrapper container">
         <div class="question-text-wrapper">
-          <span class="question-text">Остались вопросы?</span>
-          <p class="question-text">Заполните форму обратной связи и&nbsp;мы&nbsp;обязательно ответим.</p>
+          <span class="question-text question-text_margin">Заполните форму:</span>
+          <p class="question-text">Опишите Вашу неисправность или можете указать необходимый список запчастей.</p>
         </div>
         <form action="mail.php" class="question-form" method="POST" id="form">
           <label class="question-label" for="name">
@@ -267,13 +267,13 @@
             <input class="question-input" id="tel" type="tel" placeholder="Телефон*" name="tel" autocomplete="off" data-validate-field="tel">
           </label>
           <label class="question-label" for="text">
-            <textarea class="question-input question-input_size" name="text" id="text" placeholder="Задайте вопрос"></textarea>
+            <textarea class="question-input question-input_size" name="text" id="text" placeholder="Опишите неисправность авто"></textarea>
           </label>
           <label class="question-checkbox" for="checkbox">
             <input class="checkbox" id="checkbox" type="checkbox" checked>
             Согласен на&nbsp;обработку персональных данных
           </label>
-          <button type="submit" id="submit-btn" class="btn-reset hero-btn hero-btn_sie">Отправить запрос</button>
+          <button type="submit" id="submit-btn" class="btn-reset hero-btn hero-btn_sie">Записаться на ремонт</button>
         </form>
       </div>
     </section>
