png, jpg - to webp width and height - to picture min js files

--- a/index.html
+++ b/index.html
@@ -1,34 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta name="cache" content="no-cache, no-store, must-revalidate">
+  <meta name="cache" content="public, no-store, must-revalidate">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
   <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/style1.css?ver=1.2" type="text/css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
   <link rel="icon" href="img/favicon/favicon.svg" type="imege/svg+xm">
   <title>DIVIK Ремонт вариаторов</title>
-  <!-- Yandex.Metrika counter -->
-  <script type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-      m[i].l=1*new Date();
-      for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-      k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-    ym(90566376, "init", {
-      clickmap:true,
-      trackLinks:true,
-      accurateTrackBounce:true,
-      ecommerce:"dataLayer"
-    });
-  </script>
-  <noscript><div><img src="https://mc.yandex.ru/watch/90566376" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-  <!-- /Yandex.Metrika counter -->
 </head>
 <body>
 <header class="header">
@@ -73,7 +56,7 @@
         <ul class="list-reset advantages-list">
           <li class="advantages-item">
             <picture class="advantages-pic">
-              <img src="img/advantages/1.png" alt="Первое преимущество">
+              <img src="img/advantages/1.webp" alt="Первое преимущество" width="60" height="60">
             </picture>
             <div class="advantages-item__wrapper">
               <h3 class="advantages-title">Специализированное оборудование</h3>
@@ -82,7 +65,7 @@
           </li>
           <li class="advantages-item">
             <picture class="advantages-pic">
-              <img src="img/advantages/2.png" alt="Первое преимущество">
+              <img src="img/advantages/2.webp" alt="Второе преимущество" width="60" height="60">
             </picture>
             <div class="advantages-item__wrapper">
               <h3 class="advantages-title">Самая низкая цена в&nbsp;городе</h3>
@@ -90,7 +73,7 @@
           </li>
           <li class="advantages-item">
             <picture class="advantages-pic">
-              <img src="img/advantages/3.png" alt="Первое преимущество">
+              <img src="img/advantages/3.webp" alt="Третье преимущество" width="60" height="60">
             </picture>
             <div class="advantages-item__wrapper">
               <h3 class="advantages-title">Мы не прячемся от клиентов</h3>
@@ -99,7 +82,7 @@
           </li>
           <li class="advantages-item">
             <picture class="advantages-pic">
-              <img src="img/advantages/4.png" alt="Первое преимущество">
+              <img src="img/advantages/4.webp" alt="Четвертое преимущество" width="60" height="60">
             </picture>
             <div class="advantages-item__wrapper">
               <h3 class="advantages-title">Наличие и&nbsp;качество запчастей</h3>
@@ -108,7 +91,7 @@
           </li>
           <li class="advantages-item">
             <picture class="advantages-pic">
-              <img src="img/advantages/5.png" alt="Первое преимущество">
+              <img src="img/advantages/5.webp" alt="Пятое преимущество" width="60" height="60">
             </picture>
             <div class="advantages-item__wrapper">
               <h3 class="advantages-title">Возможность экспресс замены</h3>
@@ -117,7 +100,7 @@
           </li>
           <li class="advantages-item">
             <picture class="advantages-pic">
-              <img src="img/advantages/6.png" alt="Первое преимущество">
+              <img src="img/advantages/6.webp" alt="Шестое преимущество" width="60" height="60">
             </picture>
             <div class="advantages-item__wrapper">
               <h3 class="advantages-title">Профессиональный инструмент</h3>
@@ -126,7 +109,7 @@
           </li>
           <li class="advantages-item">
             <picture class="advantages-pic">
-              <img src="img/advantages/7.png" alt="Первое преимущество">
+              <img src="img/advantages/7.webp" alt="Седьмое преимущество" width="60" height="60">
             </picture>
             <div class="advantages-item__wrapper">
               <h3 class="advantages-title">Диагностическое оборудование</h3>
@@ -135,7 +118,7 @@
           </li>
           <li class="advantages-item">
             <picture class="advantages-pic">
-              <img src="img/advantages/8.png" alt="Первое преимущество">
+              <img src="img/advantages/8.webp" alt="Восьмое преимущество" width="60" height="60">
             </picture>
             <div class="advantages-item__wrapper">
               <h3 class="advantages-title">Собственное производство</h3>
@@ -155,52 +138,52 @@
         <div class="swiper">
           <ul class="swiper-wrapper list-reset aboutUs-list">
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/NISSAN.jpg" alt="NISSAN">
+              <img src="img/aboutUs/NISSAN.webp" alt="NISSAN" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/mitsubishi.jpg" alt="MITSUBISHI">
+              <img src="img/aboutUs/mitsubishi.webp" alt="MITSUBISHI" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/CHERY.jpg" alt="CHERY">
+              <img src="img/aboutUs/CHERY.webp" alt="CHERY" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/CITROEN.jpg" alt="CITROEN">
+              <img src="img/aboutUs/CITROEN.webp" alt="CITROEN" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/DODGE.jpg" alt="DODGE">
+              <img src="img/aboutUs/DODGE.webp" alt="DODGE" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/PEUGEOT.jpg" alt="PEUGEOT">
+              <img src="img/aboutUs/PEUGEOT.webp" alt="PEUGEOT" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/JEEP.jpg" alt="JEEP">
+              <img src="img/aboutUs/JEEP.webp" alt="JEEP" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/AUDI.jpg" alt="AUDI">
+              <img src="img/aboutUs/AUDI.webp" alt="AUDI" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/RENAULT.jpg" alt="RENAULT">
+              <img src="img/aboutUs/RENAULT.webp" alt="RENAULT" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/INFINITI.jpg" alt="INFINITI">
+              <img src="img/aboutUs/INFINITI.webp" alt="INFINITI" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/TOYOTA.jpg" alt="TOYOTA">
+              <img src="img/aboutUs/TOYOTA.webp" alt="TOYOTA" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/LEXUS.jpg" alt="LEXUS">
+              <img src="img/aboutUs/LEXUS.webp" alt="LEXUS" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/HYUNDAI.jpg" alt="HYUNDAI">
+              <img src="img/aboutUs/HYUNDAI.webp" alt="HYUNDAI" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/KIA.jpg" alt="KIA">
+              <img src="img/aboutUs/KIA.webp" alt="KIA" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/SUBARU.jpg" alt="SUBARU">
+              <img src="img/aboutUs/SUBARU.webp" alt="SUBARU" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/LIFAN.jpg" alt="LIFAN">
+              <img src="img/aboutUs/LIFAN.webp" alt="LIFAN" width="83" height="83">
             </li>
           </ul>
           <div class="swiper-pagination"></div>
@@ -232,17 +215,17 @@
           <ul class="list-reset contacts-list contacts-list_flex">
             <li class="contacts-item">
               <a href="https://t.me/oooDivik" target="_blank">
-                <img src="img/contacts/telegram.png" alt="Напишите нам в Telegram">
+                <img src="img/contacts/telegram.webp" alt="Напишите нам в Telegram" width="50" height="50">
               </a>
             </li>
             <li class="contacts-item">
               <a href="https://wa.me/79527753007" target="_blank">
-                <img src="img/contacts/whatsapp.png" alt="Напишите нам в WhatsApp">
+                <img src="img/contacts/whatsapp.webp" alt="Напишите нам в WhatsApp" width="50" height="50">
               </a>
             </li>
             <li class="contacts-item">
               <a href="viber://chat?number=%2B79527753007" target="_blank">
-                <img src="img/contacts/viber.png" alt="Напишите нам в Viber">
+                <img src="img/contacts/viber.webp" alt="Напишите нам в Viber" width="50" height="50">
               </a>
             </li>
           </ul>
@@ -279,16 +262,24 @@
     </section>
   </main>
 <footer class="footer">
-<!--  <noscript>-->
-<!--    <div>-->
-<!--      <img src="https://mc.yandex.ru/watch/90566376" style="position:absolute; left:-9999px;" alt="" />-->
-<!--    </div>-->
-<!--  </noscript>-->
 </footer>
-<!--<script src="js/yandexMetrika.js"></script>-->
-<script type="text/javascript" src="js/jquery-3.6.1.min.js"></script>
-<!--<script src="https://code.jquery.com/jquery-3.6.0.js"></script>-->
-<!--<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>-->
+<!-- Yandex.Metrika counter -->
+<script>
+  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+    m[i].l=1*new Date();
+    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+  ym(90566376, "init", {
+    clickmap:true,
+    trackLinks:true,
+    accurateTrackBounce:true,
+    ecommerce:"dataLayer"
+  });
+</script>
+<!-- /Yandex.Metrika counter -->
+<script src="js/jquery-3.6.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 <script src="https://api-maps.yandex.ru/2.1/?apikey=вашAPI-ключ&lang=ru_RU"></script>
 <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
