--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </header>
   <main class="main">
     <section class="hero">
-      <h2 class="visually-hidden">Ремонт вариаторов</h2>
+      <h2 class="visually-hidden">Ремонт вариатора Nissan и Mitsubishi</h2>
       <div class="hero-wrapper container">
         <h1 class="hero-title">Ремонт вариатора в&nbsp;Нижнем Новгороде</h1>
         <p class="hero-text">Профессиональный ремонт с&nbsp;использованием спецоборудования, отсутствие посредников, собственное производство и&nbsp;огромное наличиие запчастей. Качественное восстановление вариаторов и&nbsp;узлов, диагностика Вашего автомобиля</p>
@@ -138,52 +138,52 @@
         <div class="swiper">
           <ul class="swiper-wrapper list-reset aboutUs-list">
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/NISSAN.webp" alt="NISSAN" width="83" height="83">
+              <img src="img/aboutUs/NISSAN.webp" alt="Ремонт вариатора NISSAN" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/mitsubishi.webp" alt="MITSUBISHI" width="83" height="83">
+              <img src="img/aboutUs/mitsubishi.webp" alt="Ремонт вариатора MITSUBISHI" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/CHERY.webp" alt="CHERY" width="83" height="83">
+              <img src="img/aboutUs/CHERY.webp" alt="Ремонт вариатора CHERY" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/CITROEN.webp" alt="CITROEN" width="83" height="83">
+              <img src="img/aboutUs/CITROEN.webp" alt="Ремонт вариатора CITROEN" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/DODGE.webp" alt="DODGE" width="83" height="83">
+              <img src="img/aboutUs/DODGE.webp" alt="Ремонт вариатора DODGE" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/PEUGEOT.webp" alt="PEUGEOT" width="83" height="83">
+              <img src="img/aboutUs/PEUGEOT.webp" alt="Ремонт вариатора PEUGEOT" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/JEEP.webp" alt="JEEP" width="83" height="83">
+              <img src="img/aboutUs/JEEP.webp" alt="Ремонт вариатора JEEP" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/AUDI.webp" alt="AUDI" width="83" height="83">
+              <img src="img/aboutUs/AUDI.webp" alt="Ремонт вариатора AUDI" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/RENAULT.webp" alt="RENAULT" width="83" height="83">
+              <img src="img/aboutUs/RENAULT.webp" alt="Ремонт вариатора RENAULT" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/INFINITI.webp" alt="INFINITI" width="83" height="83">
+              <img src="img/aboutUs/INFINITI.webp" alt="Ремонт вариатора INFINITI" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/TOYOTA.webp" alt="TOYOTA" width="83" height="83">
+              <img src="img/aboutUs/TOYOTA.webp" alt="Ремонт вариатора TOYOTA" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/LEXUS.webp" alt="LEXUS" width="83" height="83">
+              <img src="img/aboutUs/LEXUS.webp" alt="Ремонт вариатора LEXUS" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/HYUNDAI.webp" alt="HYUNDAI" width="83" height="83">
+              <img src="img/aboutUs/HYUNDAI.webp" alt="Ремонт вариатора HYUNDAI" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/KIA.webp" alt="KIA" width="83" height="83">
+              <img src="img/aboutUs/KIA.webp" alt="Ремонт вариатора KIA" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/SUBARU.webp" alt="SUBARU" width="83" height="83">
+              <img src="img/aboutUs/SUBARU.webp" alt="Ремонт вариатора SUBARU" width="83" height="83">
             </li>
             <li class="swiper-slide aboutUs-item">
-              <img src="img/aboutUs/LIFAN.webp" alt="LIFAN" width="83" height="83">
+              <img src="img/aboutUs/LIFAN.webp" alt="Ремонт вариатора LIFAN" width="83" height="83">
             </li>
           </ul>
           <div class="swiper-pagination"></div>
@@ -244,7 +244,7 @@
         </div>
         <form action="mail.php" class="question-form" method="POST" id="form">
           <label class="question-label" for="name">
-            <input class="question-input" id="name" type="text" placeholder="ФИО*" name="name" autocomplete="off">
+            <input class="question-input" id="name" type="text" placeholder="Имя*" name="name" autocomplete="off">
           </label>
           <label class="question-label" for="tel">
             <input class="question-input" id="tel" type="tel" placeholder="Телефон*" name="tel" autocomplete="off" data-validate-field="tel">
