sitemap.xml robots.txt

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta name="description" content="Ремонт вариаторов Nissan, Mitsubishi и других марок. Быстрый и качественный ремонт JF011E, JF015E, JF016E, JF017E, QR019CH, 0AW, RDC15, JF010E. Все запчасти в наличи, собственное производство.">
+  <meta name="description" content="Устранение ошибок P0776, P0868, P17F0, качественный ремонт в Нижнем новгороде, Все запчасти в наличи, собственное производство.">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/fonts.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
   <link rel="icon" href="img/favicon/favicon.svg" type="imege/svg+xm">
-  <title>DIVIK Ремонт вариаторов</title>
+  <title>DIVIK восстановление вариаторов</title>
 </head>
 <body>
 <header class="header">
